Fix Input File Issue
Fix an issue where multiple files were injected at the same time for the validate command, this should only run the command once per file.

--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -43,4 +43,7 @@ jobs:
 
     # Run the validation of all Specification Files
     - name: Validate OpenAPI Specs
-      run: openapi-generator-cli validate -i *.json
+      run: |
+        for file in $(find . -name "*.json"); do
+          openapi-generator-cli validate -i "$file"
+        done
