--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -19,6 +19,11 @@ jobs:
     # Operating system filter for the runners
     runs-on: ubuntu-latest
 
+    # Set explicit least privilege permissions
+    permissions:
+      contents: read
+
+    # Run the set of steps needed to validate the OpenAPI Spec files
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE
     - name: Download Source Files
