--- a/src/shield/TypeScript/tsconfig.json
+++ b/src/shield/TypeScript/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "noImplicitAny": false,
+    "outDir": "./bin",
     "plugins": [
       {
         "transform": "typia/lib/transform"
