--- a/src/dataGateway/TypeScript/package.json
+++ b/src/dataGateway/TypeScript/package.json
@@ -2,12 +2,15 @@
   "name": "@shi-corp/sdk-data-gateway",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "bin/index.js",
   "description": "SDK client used to interface with the SHI Data Gateway service.",
   "keywords": [
     "OpenAPI",
     "Data Gateway",
-    "SDK"
+    "SDK",
+    "Automation",
+    "API",
+    "SHI"
   ],
   "homepage": "https://docs.shilab.com/",
   "bugs": {
