--- a/src/shield/TypeScript/package.json
+++ b/src/shield/TypeScript/package.json
@@ -2,12 +2,15 @@
   "name": "@shi-corp/sdk-shield",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "bin/index.js",
   "description": "SDK client used to interface with the SHI Data Gateway service.",
   "keywords": [
     "OpenAPI",
     "SHIELD",
-    "SDK"
+    "SDK",
+    "Automation",
+    "API",
+    "SHI"
   ],
   "homepage": "https://github.com/Software-Hardware-Integration-Lab/OpenAPI#readme",
   "bugs": {
