--- a/src/shield/TypeScript/package.json
+++ b/src/shield/TypeScript/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "main": "bin/index.js",
-  "description": "SDK client used to interface with the SHI Data Gateway service.",
+  "description": "SDK client used to interface with the SHIELD application.",
   "keywords": [
     "OpenAPI",
     "SHIELD",
