Export Types + Optimize Bundle Size
Remove comments from executable JavaScript. They are still present in the Type Def files.
Ensure that the types are exported at the root of the package so that multiple imports are not needed.

--- a/src/dataGateway/TypeScript/package.json
+++ b/src/dataGateway/TypeScript/package.json
@@ -24,7 +24,8 @@
   "author": "Elliot Huffman (elliot_huffman@shi.com)",
   "scripts": {
     "generate:Sdk": "kiota generate -l typescript -d ../../../specs/Data-Gateway.json -c DataGatewayClient -o ./sdk/ --exclude-backward-compatible",
-    "build:Prod": "tsc  --sourceMap false",
+    "prebuild:Prod": "tsc --sourceMap false --emitDeclarationOnly false",
+    "build:Prod": "tsc --sourceMap false --removeComments false",
     "prepare": "ts-patch install"
   },
   "devDependencies": {
