--- a/src/shield/TypeScript/package.json
+++ b/src/shield/TypeScript/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "build:Dev": "tsc",
     "prebuild:Prod": "tsc --sourceMap false --emitDeclarationOnly false",
-    "build:Prod": "tsc --sourceMap false --emitDeclarationOnly false",
+    "build:Prod": "tsc --sourceMap false --removeComments false",
     "generate:Sdk": "kiota generate -l typescript -d ../../../specs/SHIELD.json -c ShieldClient -o ./sdk/ --exclude-backward-compatible",
     "prepare": "ts-patch install"
   },
