--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Entra",
         "Lockdown",
         "openapi",
+        "readwrite",
         "SSPR"
     ],
     "github.copilot.editor.enableAutoCompletions": false
