--- a/.github/workflows/Publish-NPM.yml
+++ b/.github/workflows/Publish-NPM.yml
@@ -1,5 +1,5 @@
 # Display Name of the workflow
-name: Generate SDKs
+name: Publish - SDKs to Global Registries
 
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -45,7 +45,7 @@ jobs:
     steps:
       # Download all of the source code
       - name: Clone Repo Locally
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       # Set up NodeJS on the build host
       - name: Setup Node.JS Runtime
