--- a/src/urlShortener/TypeScript/package.json
+++ b/src/urlShortener/TypeScript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shi-corp/sdk-url-shortener",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "main": "bin/index.js",
   "description": "SDK client used to interface with the URL Shortener application.",
@@ -39,5 +39,25 @@
     "@microsoft/kiota-authentication-azure": "~1.0.0-preview.97",
     "@microsoft/kiota-bundle": "~1.0.0-preview.97",
     "typia": "~9.7.1"
+  },
+  "overrides": {
+    "function-bind": "npm:@socketregistry/function-bind@^1",
+    "hasown": "npm:@socketregistry/hasown@^1",
+    "is-core-module": "npm:@socketregistry/is-core-module@^1",
+    "is-interactive": "npm:@socketregistry/is-interactive@^1",
+    "is-unicode-supported": "npm:@socketregistry/is-unicode-supported@^1",
+    "path-parse": "npm:@socketregistry/path-parse@^1",
+    "safe-buffer": "npm:@socketregistry/safe-buffer@^1",
+    "safer-buffer": "npm:@socketregistry/safer-buffer@^1"
+  },
+  "resolutions": {
+    "function-bind": "npm:@socketregistry/function-bind@^1",
+    "hasown": "npm:@socketregistry/hasown@^1",
+    "is-core-module": "npm:@socketregistry/is-core-module@^1",
+    "is-interactive": "npm:@socketregistry/is-interactive@^1",
+    "is-unicode-supported": "npm:@socketregistry/is-unicode-supported@^1",
+    "path-parse": "npm:@socketregistry/path-parse@^1",
+    "safe-buffer": "npm:@socketregistry/safe-buffer@^1",
+    "safer-buffer": "npm:@socketregistry/safer-buffer@^1"
   }
 }
