Add Linting Support
Add ES Lint via SHI Dev Utilities to each SDK to ensure code consistency across all of the SDKs and fix any linting issues identified.
Exclude the linting config from the published package.

--- a/src/dataGateway/TypeScript/.npmignore
+++ b/src/dataGateway/TypeScript/.npmignore
@@ -5,5 +5,8 @@
 # Ignore the TypeScript config
 tsconfig.json
 
+# Ignore linting config
+eslint.config.js
+
 # Ignore the generated SDK source code
 /sdk/
