--- a/.github/workflows/Publish-NPM.yml
+++ b/.github/workflows/Publish-NPM.yml
@@ -80,6 +80,11 @@ jobs:
               run: npm run-script generate:Sdk
               working-directory: ${{matrix.specifications.sdkPath}}
 
+            # Enforce linting standards
+            - name: Generate SDK Client Code via Kiota
+              run: npm run lint
+              working-directory: ${{matrix.specifications.sdkPath}}
+
             # Generate the TypeScript SDK
             - name: Build Project
               run: npm run-script build:Prod
